testsuite/poke.pkl/int-struct-type-diag-5.pk
/* { dg-do compile } */

deftype Foo =
  struct int<32>
  {
    int<32> foo; struct {} bar; /* { dg-error "invalid field" } */
  };
